Updated home page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
     <div class="img">
       <img src="img/homepage.jpg" alt="homepage">
     </div>
+
+    <section class="main2">
+      <div class="row">
+        <div class="small-4 large-4 columns">
+          <h6>Astology</h6>
+          <a href="Astrology/index.html">
+          <img src="img/Aquarius-Notebook.jpg" alt="Aquarius">
+          </a>
+        </div>
+        <div class="small-4 large-4 columns">
+          <h6>Nature</h6>
+          <a href="Nature/index.html">
+          <img src="img/Moons-Notebook.jpg" alt="Moon">
+        </a>
+        </div>
+        <div class="small-4 large-4 columns">
+          <h6>Entertainment</h6>
+          <a href="Entertainment/index.html">
+          <img src="img/Great-Gatsby-Notebook.jpg" alt="GG">
+        </a>
+        </div>
+      </div>
   </main>
 
     <!-- Footer -->
