Update Tag Links

--- a/tag.html
+++ b/tag.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Aquarius.html">
+                <a href="Astology/Aquarius.html">
                   <img src="img/Aquarius-Notebook.jpg" alt="Aquarius">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Leo.html">
+                <a href="Astology/Leo.html">
                   <img src="img/Leo-Notebook.jpg" alt="Leo">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -85,7 +85,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Moons.html">
+                <a href="Nature/Moons.html">
                   <img src="img/Moons-Notebook.jpg" alt="Moons">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -97,7 +97,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Sunflower.html">
+                <a href="Nature/Sunflower.html">
                   <img src="img/Sunflower-Notebook.jpg" alt="Sunflower">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -109,7 +109,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="GreatGatsby.html">
+                <a href="Entertainment/GreatGatsby.html">
                   <img src="img/Great-Gatsby-Notebook.jpg" alt="Great Gatsby">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -121,7 +121,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Mario.html">
+                <a href="Entertainment/Mario.html">
                   <img src="img/Mario-Notebook.jpg" alt="Mario">
                 </a>
                 <h5 class="right">$9.99</h5>
