--- a/tag2.html
+++ b/tag2.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Taurus.html">
+                <a href="Astology/Taurus.html">
                   <img src="img/Taurus-Notebook.jpg" alt="Taurus">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Aries.html">
+                <a href="Astology/Aries.html">
                   <img src="img/Aries-Notebook.jpg" alt="Aries">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -85,7 +85,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Lion.html">
+                <a href="Nature/Lion.html">
                   <img src="img/Lion-Notebook.jpg" alt="Lion">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -97,7 +97,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="PalmTrees.html">
+                <a href="Nature/PalmTrees.html">
                   <img src="img/Palm-Trees-Notebook.jpg" alt="Palm Trees">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -109,7 +109,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Batman.html">
+                <a href="Entertainment/Batman.html">
                   <img src="img/Batman-Notebook.jpg" alt="Batman">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -121,7 +121,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Superman.html">
+                <a href="Entertainment/Superman.html">
                   <img src="img/Superman-Notebook.jpg" alt="Superman">
                 </a>
                 <h5 class="right">$9.99</h5>
