--- a/tag3.html
+++ b/tag3.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Cancer.html">
+                <a href="Astology/Cancer.html">
                   <img src="img/Cancer-Notebook.jpg" alt="Cancer">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Gemini.html">
+                <a href="Astorlogy/Gemini.html">
                   <img src="img/Gemini-Notebook.jpg" alt="Gemini">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -85,7 +85,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="TreeLife.html">
+                <a href="Nature/TreeLife.html">
                   <img src="img/Tree-Life-Notebook.jpg" alt="Tree Life">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -97,7 +97,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Flowers.html">
+                <a href="Nature/Flowers.html">
                   <img src="img/Flowers-Notebook.jpg" alt="Flower">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -109,7 +109,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Music.html">
+                <a href="Entertainment/Music.html">
                   <img src="img/Music-Notebook.jpg" alt="Music">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -121,7 +121,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="WonderWoman.html">
+                <a href="Entertainment/WonderWoman.html">
                   <img src="img/Wonder-Woman-Notebook.jpg" alt="Wonder Woman">
                 </a>
                 <h5 class="right">$9.99</h5>
