--- a/tag.html
+++ b/tag.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Astology/Aquarius.html">
+                <a href="Astrology/Aquarius.html">
                   <img src="img/Aquarius-Notebook.jpg" alt="Aquarius">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Astology/Leo.html">
+                <a href="Astrology/Leo.html">
                   <img src="img/Leo-Notebook.jpg" alt="Leo">
                 </a>
                 <h5 class="right">$9.99</h5>
