--- a/tag3.html
+++ b/tag3.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Astology/Cancer.html">
+                <a href="Astrology/Cancer.html">
                   <img src="img/Cancer-Notebook.jpg" alt="Cancer">
                 </a>
                 <h5 class="right">$9.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Astorlogy/Gemini.html">
+                <a href="Astrology/Gemini.html">
                   <img src="img/Gemini-Notebook.jpg" alt="Gemini">
                 </a>
                 <h5 class="right">$9.99</h5>
