--- a/shop2.html
+++ b/shop2.html
@@ -67,7 +67,7 @@
                 <h5 class="right">$9.99</h5>
                 <h4>Tree of Life Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop3.html">In Love!</a></li>
+                  <li><a href="tag3.html">In Love!</a></li>
                 </ul>
               </div>
             </li>
@@ -79,7 +79,7 @@
                 <h5 class="right">$5.99</h5>
                 <h4>Lion Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop2.html">Last Chance!</a></li>
+                  <li><a href="tag2.html">Last Chance!</a></li>
                 </ul>
               </div>
             </li>
@@ -91,7 +91,7 @@
                 <h5 class="right">$9.99</h5>
                 <h4>Phases of the Moon Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop.html">New, New, New!</a></li>
+                  <li><a href="tag.html">New, New, New!</a></li>
                 </ul>
               </div>
             </li>
@@ -103,7 +103,7 @@
                 <h5 class="right">$5.99</h5>
                 <h4>Palm Tree Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop2.html">Last Chance!</a></li>
+                  <li><a href="tag2.html">Last Chance!</a></li>
                 </ul>
               </div>
             </li>
@@ -115,7 +115,7 @@
                 <h5 class="right">$9.99</h5>
                 <h4>Sunflower Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop.html">New, New, New!</a></li>
+                  <li><a href="tag.html">New, New, New!</a></li>
                 </ul>
               </div>
             </li>
@@ -127,7 +127,7 @@
                 <h5 class="right">$9.99</h5>
                 <h4>Flower Notebook</h4>
                 <ul class="inline-list">
-                  <li><a href="../shop3.html">In Love!</a></li>
+                  <li><a href="tag3.html">In Love!</a></li>
                 </ul>
               </div>
             </li>
