--- a/tag2.html
+++ b/tag2.html
@@ -61,7 +61,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="Astology/Taurus.html">
+                <a href="Astrology/Taurus.html">
                   <img src="img/Taurus-Notebook.jpg" alt="Taurus">
                 </a>
                 <h5 class="right">$5.99</h5>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="Astology/Aries.html">
+                <a href="Astrology/Aries.html">
                   <img src="img/Aries-Notebook.jpg" alt="Aries">
                 </a>
                 <h5 class="right">$5.99</h5>
