--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="main2">
       <div class="row">
         <div class="small-4 large-4 columns">
-          <h6>Astology</h6>
+          <h6>Astrology</h6>
           <a href="Astrology/index.html">
           <img src="img/Aquarius-Notebook.jpg" alt="Aquarius">
           </a>
